--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: cpp
 compiler:
+  - gcc
   - clang
 before_script:
   - mkdir ../build
@@ -7,6 +8,6 @@ before_script:
 script:
   - cmake ../381903-3_Stetsenko_lab_14
   - make -j
-  - cd ./test/test_maplib
+  - ./test/MP2_TESTS
 notifications:
   email: false
