--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,29 @@
 cmake_minimum_required(VERSION 2.8) #Проверка версии CMake.
 
-set(PROJECT_NAME maplib) #Создаем обычную локальную переменную с именем проекта
+set(PROJECT_NAME Test) #Создаем обычную локальную переменную с именем проекта
 project(${PROJECT_NAME}) # Название проекта
 
-set(app map) #Переменная с именем приложения
-set(lib maplib) #Переменная с именем библиотеки
 
-set(MP2_LIBRARY "${PROJECT_NAME}")
-set(MP2_TESTS   "test_${PROJECT_NAME}")
+set(main main)
+set(maplib maplib)
+
+
 
 set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs" FORCE) #Создается переменная CMAKE_CONFIGURATION_TYPES со значением "Debug;Release" и меткой/разделом Configs, переменная сохраниется в специальном файле доступном из всех файлов,
 if(NOT CMAKE_BUILD_TYPE) # проверка имеющихся у компилятора вариантов сборки
-    set(CMAKE_BUILD_TYPE Release) #Если нет то устанавливаем Release
+  set(CMAKE_BUILD_TYPE Release) #Если нет то устанавливаем Release
 endif()
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/maplib) #Добавляем директорию "${CMAKE_CURRENT_SOURCE_DIR}/maplib" в дополняемые каталоги включаемых файлов
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/List) #Добавляем директорию  в дополняемые каталоги включаемых файлов
 #${CMAKE_CURRENT_SOURCE_DIR} - стандартная переменная с адресом рабочей директории
 
-add_subdirectory(map)
+ #Добавляем директорию с под-CMakeList-ом, и выполняем под-CMakeList
+
+add_subdirectory(main)
+add_subdirectory(test)
+add_subdirectory(gtest)
 add_subdirectory(maplib)
 
-add_subdirectory(gtest)
-add_subdirectory(test)
 
+file(GLOB hdrs "*.h*")
+file(GLOB srcs "*.cpp")
