--- a/maplib/CMakeLists.txt
+++ b/maplib/CMakeLists.txt
@@ -1,4 +1,6 @@
 file(GLOB hdrs "*.h*") #Добавляем в переменную hdrs все файлы с расширением .h
 file(GLOB srcs "*.cpp")#Добавляем в переменную srcs все файлы с расширением .h
 
-add_library(${lib} STATIC ${srcs} ${hdrs} TNode.cpp TNode.h TMap.cpp TMap.h TSortMap.cpp TSortMap.h TMapIterator.cpp TMapIterator.h) #Создаем статическую библиотеку с именем из переменной ${MyLib1}, объявленной в родительском CMake файле (локальные переменные переносятся в наследников), в неё добавляются файлы из переменных ${srcs} и ${hdrs}
+add_library(${maplib} STATIC ${srcs} ${hdrs}) #Создаем статическую библиотеку с именем из переменной ${MyLib1}, объявленной в родительском CMake файле (локальные переменные переносятся в наследников), в неё добавляются файлы из переменных ${srcs} и ${hdrs}
+
+
